updated to return all patients for default search and fixed so that there is no exception if Auth is disabled.
